--- a/index.html
+++ b/index.html
@@ -4,9 +4,48 @@
   <title>My Page</title>
  </head>
  <body>
-  <h1>Welcome to my page</h1>
-  <p>I like cars and lorries and have a big Jeep!</p>
-  <h2>Where I live</h2>
-  <p>I live in a small hut on a mountain!</p>
+  <h1>Elements We Need to Use</h1>
+  <a href="http://www.w3.org/TR/html5/dom.html#dom">W3 Resources with tag definitions</a>
+  <h3>Metadata Content</h3>
+  <p>base, link, meta, noscript, script, style, template, title</p>
+  
+  <h3>Flow Content</h3>
+  <p>a, abbr, address, area (if it is a descendant of a map element), article, aside, audio, b, bdi, bdo, blockquote, br, 
+ 	button, canvas, cite, code, data, datalist, del, dfn, div, dl, em, embed, fieldset, figure, footer, form, h1, h2, h3, 
+ 	h4, h5, h6, header,  hr, i, iframe, img, input, ins, kbd, keygen, label, main, map, mark, math, meter, nav, noscript, 
+ 	object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, sub, sup, svg, 
+ 	table, template, textarea, time, u, ul, var, video, wbr, Text
+  </p>
+
+  <h3>Sectioning Content</h3>
+  <p>article, aside, nav, section
+  </p>
+
+  <h3>Phrasing Content</h3>
+  <p>⇒ a, abbr, area (if it is a descendant of a map element), audio, b, bdi, bdo, br, button, canvas, cite, code, data, 
+ 	datalist, del, dfn, em, embed, i, iframe, img, input, ins, kbd, keygen, label, map, mark, math, meter, noscript, object, 
+ 	output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, template, textarea, time, u, var, 
+ 	video, wbr, Text
+  </p>
+
+  <h3>Embedded Content</h3>
+  <p>audio, canvas, embed, iframe, img, math, object, svg, video
+  </p>
+  <h3>Interactive Content</h3>
+  <p>a, audio (if the controls attribute is present), button, embed, iframe, img (if the usemap attribute is present), input (if 	type attribute is not in the Hidden state), keygen, label, object (if the usemap attribute is present), select, textarea, 	   video (if the controls attribute is present)
+  </p>
+ 
+  <h3>Palpable Content</h3>
+  <p>a, abbr, address, article, aside, audio (if the controls attribute is present), b, bdi, bdo, blockquote, button, canvas, 
+ 	cite, code, data, dfn, div, dl (if the element's children include at least one name-value group), em, embed, fieldset, 
+ 	figure, footer, form, h1, h2, h3, h4, h5, h6, header, i, iframe, img, input (if the type attribute is not in the Hidden state), ins, kbd, keygen, label, main, map, mark, math, meter, nav, object, ol (if the element's children include at least one li element), output, p, pre, progress, q, ruby, s, samp, section, select, small, span, strong, sub, sup, svg, table, textarea, time, u, ul (if the element's children include at least one li element), var, video, Text that is not inter-element whitespace
+  </p>
+
+  <h3>Script-Supporting Elements</h3>
+  <p>script, template</p>
+
+  <a href="http://validator.w3.org">Validator</a>
+
+  <a href="conformance.html">Conformance Page</a>
  </body>
 </html>
