Added myself to team page, and added images folder

--- a/team.html
+++ b/team.html
@@ -14,5 +14,15 @@
   	<li>Phone</li>
   </ul>
   <p>Introduction info</p>
+
+  <br />
+  <h3>Tyler Tedeschi<h3>
+  <img src="images/Tyler.jpg">
+  <h4>Contact Information</h4>
+  <ul>
+  	<li>ttedesch@ucsd.edu</li>
+  	<li>(805)-280-5605</li>
+  </ul>
+  <p>My name is Tyler, and I am a senior at UCSD who likes to surf, play hockey, play video games, and snowboard.</p>
  </body>
 </html>
