--- a/team.html
+++ b/team.html
@@ -4,7 +4,7 @@
   <title>FoodRepublic</title>
  </head>
  <body>
-  <h1>Our Team</h1>
+  <h1>Meet the Team</h1>
   <br />
   <h3>Member Name<h3>
   <img src="">
