--- a/team.html
+++ b/team.html
@@ -2,9 +2,12 @@
 <html>
  <head>
   <title>FoodRepublic</title>
+  <link href="teamStyle.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
-  <h1>Meet the Team</h1>
+  <div id="TeamPage">
+  	<h1>Meet the Team</h1>
+  </div>
   <br />
   <h3>Member Name<h3>
   <img src="">
