Added id to h1 tage for "Meet the Team"

--- a/team.html
+++ b/team.html
@@ -5,9 +5,7 @@
   <link href="teamStyle.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
-  <div id="TeamPage">
-  	<h1>Meet the Team</h1>
-  </div>
+  	<h1 id="TeamPage">Meet the Team</h1>
   <br />
   <h3>Member Name<h3>
   <img src="">
