--- a/flow-content.html
+++ b/flow-content.html
@@ -5,5 +5,6 @@
  	</head>
  	<body>
  		<h1>Flow Content Elements</h1>
+ 		<p>In this assignment, we will play around with <abbr title="HyHyperText Markup Language">HTML</abbr> tags.</p>
 	</body>
  </html>
