--- a/flow-content.html
+++ b/flow-content.html
@@ -6,5 +6,11 @@
  	<body>
  		<h1>Flow Content Elements</h1>
  		<p>In this assignment, we will play around with <abbr title="HyHyperText Markup Language">HTML</abbr> tags.</p>
+ 		<address>UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</address>
+ 		<img src="images/ContactUs.jpg" width="15%" height="15%" alt="ContactUs" usemap="#ContactUs">
+ 		<map name="ContactUs"> 
+ 			<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.htm"  target="_blank" />
+ 		</map>
+ 		
 	</body>
  </html>
