--- a/interactive.html
+++ b/interactive.html
@@ -7,10 +7,15 @@
     <title>Interactive & Embedded Content</title>
  </head>
  <body>
-    <h1>Interactive Content</h1>
+    <h1>Interactive & Embedded Content</h1>
     <h3>Fixing the Childhood Obesity Epidemic</h3> 
     <p>Matt Young | TEDxStanleyPark</p>  
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/KWBOIj3GK-M" allowfullscreen></iframe>
+    <audio controls>
+        <source src="videos/fixingchildhoodobesity.mp3" type="audio/mpeg">
+    </audio>
+    <br>
+    <h3>Healthy Eating Tips for Kids</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/1Jj-9f8Yj8g" allowfullscreen></iframe>
     <br> 
     <h3>Fruit Veggie Swag</h3>
     <video src="videos/fruitveggieswag.mp4" controls></video> 
@@ -18,7 +23,11 @@
     <h3>Choose My Plate</h3>
     <img width="900" height="550" src="images/choosemyplate.jpg" alt="http://firstgradesas.weebly.com/uploads/2/0/6/2/20623748/5589606_orig.jpg" />
     <br>
+    <p>Taken from: ChooseMyPlate</p>
     <button onclick="window.open('http://www.choosemyplate.gov/videos','_blank');">Check out ChooseMyPlate.gov</button>
-    
+     <h3>Daily Food Plan Example</h3> 
+     <object width="900" height="550" data="images/dailyfoodplan.pdf" type="application/pdf">
+        <embed src="images/dailyfoodplan.pdf" type="application/pdf"/>
+     </object>
  </body>
 </html>
