--- a/interactive.html
+++ b/interactive.html
@@ -24,7 +24,18 @@
     <img width="900" height="550" src="images/choosemyplate.jpg" alt="http://firstgradesas.weebly.com/uploads/2/0/6/2/20623748/5589606_orig.jpg" />
     <br>
     <p>Taken from: ChooseMyPlate</p>
-    <button onclick="window.open('http://www.choosemyplate.gov/videos','_blank');">Check out ChooseMyPlate.gov</button>
+    <button onclick="window.open('http://www.choosemyplate.gov/videos','_blank');">Check out ChooseMyPlate.gov</button>    
+    <p>How much does your child exercise?</p>
+    <select name="Exercise Hours">
+        <option value="value1" selected>0-2 hours/week</option> 
+        <option value="value2">3-5 hours/week</option>
+        <option value="value3">6-8 hours/week</option>
+        <option value="value3">9+ hours/week</option>
+     </select>
+     <br><br>
+     <textarea name="textarea" rows="8" cols="75" wrap="hard" placeholder="Please enter a description of your child's physical activities:"></textarea>
+     <br><br>
+     <label>How much does your child weigh? <input placeholder="(in lbs)" type="text"></label>
      <h3>Daily Food Plan Example</h3> 
      <object width="900" height="550" data="images/dailyfoodplan.pdf" type="application/pdf">
         <embed src="images/dailyfoodplan.pdf" type="application/pdf"/>
