--- a/flow-content.html
+++ b/flow-content.html
@@ -5,12 +5,52 @@
  	</head>
  	<body>
  		<h1>Flow Content Elements</h1>
- 		<p>In this assignment, we will play around with <abbr title="HyHyperText Markup Language">HTML</abbr> tags.</p>
- 		<address>UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</address>
- 		<img src="images/ContactUs.jpg" width="15%" height="15%" alt="ContactUs" usemap="#ContactUs">
- 		<map name="ContactUs"> 
- 			<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.htm"  target="_blank" />
- 		</map>
+ 		<hr>
+ 		<p>In this assignment, we will play around with <abbr title="HyHyperText Markup Language">HTML</abbr> tags. We are going to learn a lot about HTML!</p>
  		
+ 		<p>In the last assignment, Megan introduced us to a website called Xtensio.</p>
+
+		<aside>
+  			<h2>Xtensio</h2>
+  			<p>Xtensio allows us to create personas easily.</p>
+		</aside>
+		
+ 		<article>
+  			<h3>Food Republic</h3>
+ 			<p><b>Food Republic</b> is a website that helps parents save times in cooking and track their intakes by providing 
+ 			   easy healthy recipes. It will generate a shopping list once the users finish selecting their meals. </p>
+		</article>
+		
+		<p>Most of us read from left to right. Can we read from right to left? Let's try! <bdo dir="rtl">Now I'm reading from right to left!</bdo></p>
+
+		<p>Are you a programmer? What do you think my code will produce?</p>
+		<code><pre>
+		public class HelloWorld {
+			public static void main(String[] args) {
+				System.out.println("Hello World!");
+			}
+		}</pre>
+		</code>
+		<br>
+		
+		<p>After brainstorming, we eliminate items that we don't want by crossing them out like so: <del>unwanted items</del></p>
+		
+		<p>What is <i>love</i>? According to <em>Google</em>, <dfn>Love</dfn> is an intense feeling of deep affection.</p>
+			
+ 		
+ 		<footer>
+ 			<address>UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</address>
+ 			<img src="images/ContactUs.jpg" width="15%" height="15%" alt="ContactUs" usemap="#ContactUs">
+ 			<map name="ContactUs"> 
+ 				<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.htm"  target="_blank" />
+ 			</map>  
+		</footer>	
+		
+		<form action="demo_form.asp">
+First name: <input type="text" name="FirstName" value="Mickey"><br>
+Last name: <input type="text" name="LastName" value="Mouse"><br>
+<input type="submit" value="Submit">
+</form>
+		
 	</body>
  </html>
