finished embedded/interaction elements without duplicates

--- a/interactive.html
+++ b/interactive.html
@@ -7,7 +7,10 @@
     <title>Interactive & Embedded Content</title>
  </head>
  <body>
-    <h1>Interactive & Embedded Content</h1>
+    <header>
+        <h1>Interactive & Embedded Content</h1>
+        <p>The tags included in this page are: audio, button, canvas, embed, iframe, img, input, label, object, option, script, select, textarea, and video.</p>
+    </header>
     <h3>Fixing the Childhood Obesity Epidemic</h3> 
     <p>Matt Young | TEDxStanleyPark</p>  
     <audio controls>
