--- a/team.html
+++ b/team.html
@@ -6,24 +6,34 @@
  </head>
  <body>
   	<h1 id="TeamPage">Meet the Team</h1>
-  <br />
-  <h3>Member Name<h3>
-  <img src="">
-  <h4>Contact Information</h4>
-  <ul>
-  	<li>Email</li>
-  	<li>Phone</li>
-  </ul>
-  <p>Introduction info</p>
+    <br />
+    <h3>Member Name<h3>
+    <img src="">
+    <h4>Contact Information</h4>
+    <ul>
+  	  <li>Email</li>
+  	  <li>Phone</li>
+    </ul>
+    <p>Introduction info</p>
 
-  <br />
-  <h3>Tyler Tedeschi<h3>
-  <img src="images/Tyler.jpg">
-  <h4>Contact Information</h4>
-  <ul>
-  	<li>ttedesch@ucsd.edu</li>
-  	<li>(805)-280-5605</li>
-  </ul>
-  <p>My name is Tyler, and I am a senior at UCSD who likes to surf, play hockey, play video games, and snowboard.</p>
+    <br />
+    <h3>Tyler Tedeschi<h3>
+    <img src="images/Tyler.jpg">
+    <h4>Contact Information</h4>
+    <ul>
+  	  <li>ttedesch@ucsd.edu</li>
+  	  <li>(805)-280-5605</li>
+    </ul>
+    <p>My name is Tyler, and I am a senior at UCSD who likes to surf, play hockey, play video games, and snowboard.</p> 
+    
+    <br>
+    <h3>Megan Ring</h3>
+    <p>(Insert image here)</p>   
+    <h4>Contact Information</h4>
+    <ul>
+        <li>mcring@ucsd.edu</li>
+        <li>(949) 836-2747</li>
+    </ul>
+    <p>I'm Megan, and I am a fourth year studying Cognitive Science (Human-Computer Interaction) and Computer Science at UCSD.<br>I like to dance, go hiking, go skiing, and reading.</p>
  </body>
 </html>
