fixing validator issues

--- a/palpable.html
+++ b/palpable.html
@@ -25,6 +25,7 @@
 	 			<li><a href="index.html">Index</a></li>
 	 			<li><a href="team.html">Team</a></li>
 	 			<li><a href="conformance.html">Conformance</a></li>
+            </ol>
 	 	</nav>
 
 	 	<div>
@@ -74,8 +75,9 @@
  				<img src="images/ice.jpg" height="300" width="200" alt="Staples Center Ice">
  				<figcaption>On the ice at Staples Center</figcaption>
  			</figure>
-
+        </div>
 
  		<blockquote>"The question of whether a computer can think is no more interesting than the question of whether a submarine can swim."  -<cite><a href="http://www.goodreads.com/quotes/tag/computer-science">Edsger W. Dijkstra</a></cite></blockquote>
+        </main>
 	</body>
  </html>
