--- a/team.html
+++ b/team.html
@@ -7,8 +7,8 @@
  <body>
   	<h1 id="TeamPage">Meet the Team</h1>
     <br />
-    <h3>Member Name<h3>
-    <img src="">
+     <h3>Member Name</h3>
+    <img src="" alt="">
     <h4>Contact Information</h4>
     <ul>
   	  <li>Email</li>
@@ -17,8 +17,8 @@
     <p>Introduction info</p>
 
     <br />
-    <h3>Tyler Tedeschi<h3>
-    <img src="images/Tyler.jpg">
+     <h3>Tyler Tedeschi</h3>
+    <img src="images/Tyler.jpg" alt="">
     <h4>Contact Information</h4>
     <ul>
   	  <li>ttedesch@ucsd.edu</li>
