--- a/flow-content.html
+++ b/flow-content.html
@@ -24,33 +24,30 @@
 		<p>Most of us read from left to right. Can we read from right to left? Let's try! <bdo dir="rtl">Now I'm reading from right to left!</bdo></p>
 
 		<p>Are you a programmer? What do you think my code will produce?</p>
-		<code><pre>
+		<pre><code>
 		public class HelloWorld {
 			public static void main(String[] args) {
 				System.out.println("Hello World!");
 			}
-		}</pre>
-		</code>
+		}
+		</code></pre>
 		<br>
+		<p>In case you don't know, here's a sample output: <samp>Hello World!</samp></p>
 		
-		<p>After brainstorming, we eliminate items that we don't want by crossing them out like so: <del>unwanted items</del></p>
+		<p>After brainstorming, we eliminate items that we don't want by crossing them out like so: <del>unwanted items</del> or just <mark>highlight</mark> what we want to keep.</p>
 		
 		<p>What is <i>love</i>? According to <em>Google</em>, <dfn>Love</dfn> is an intense feeling of deep affection.</p>
 			
+ 		<p>My favorite quote is <q>Follow your heart.</q></p>
  		
  		<footer>
- 			<address>UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</address>
- 			<img src="images/ContactUs.jpg" width="15%" height="15%" alt="ContactUs" usemap="#ContactUs">
+ 			<address><span style="color:blue">UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</span></address>
+ 			<img src="images/ContactUs.jpg" width="200" height="50" alt="ContactUs" usemap="#ContactUs">
  			<map name="ContactUs"> 
  				<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.htm"  target="_blank" />
  			</map>  
 		</footer>	
 		
-		<form action="demo_form.asp">
-First name: <input type="text" name="FirstName" value="Mickey"><br>
-Last name: <input type="text" name="LastName" value="Mouse"><br>
-<input type="submit" value="Submit">
-</form>
 		
 	</body>
  </html>
