--- a/interactive.html
+++ b/interactive.html
@@ -43,6 +43,7 @@
         <embed src="images/dailyfoodplan.pdf" type="application/pdf"/>
      </object>
      <br>
+     <p>This is an example of the canvas tag:</p>
      <canvas id="myCanvas" width="200" height="200" style="border:5px solid #79CDCD;"></canvas>
 
      <!-- Scripts -->
