working on conformance page

--- a/conformance.html
+++ b/conformance.html
@@ -10,7 +10,7 @@
   <h2>Interactive & Embedded Content</h2>
   <p>While the interactive and embedded content tags were supported on Chrome and Safari, the PDF viewer and the controls for the audio and video player looked slightly different. In Chrome, the controls had rounded edges, while in Safari they were thinner and straight. Furthermore, the controls in Safari had a useful 30-second rewind button, which was lacking from Chrome. In other words, the control fields of the audio and video tags were affected.</p>
   <h2>Palpable Content</h2>
-  <p>I live in a small hut on a mountain!</p>
+  <p>The page content was the same across Chrome and Safari.</p>
   <h2>Phrasing Content</h2>
   <p>I live in a small hut on a mountain!</p>
  </body>
