Added pictures to team page

--- a/team.html
+++ b/team.html
@@ -5,9 +5,22 @@
   <link href="teamStyle.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
-  	<h1 id="TeamPage">Meet the Team</h1>
-    <br />
-     <h3>Member Name</h3>
+  	<div id="header"><h1 id="TeamPage">Meet Food Republic Team :)</h1></div>
+    <br>
+    
+    <div class="team">
+		<div id="Megan"><img src="images/Megan.jpg" alt="" width=250 height=310></div>
+		<div id="Kann"><img src="images/Kann.jpg" alt="" width=250 height=310></div>
+	</div>
+	<div class="team">
+		<div id="JT"><img src="images/JT.jpg" alt="" width=250 height=310></div>
+		<div id="Tyler"><img src="images/Tyler.jpg" alt="" width=250 height=310></div>
+		<div id="Ken"><img src="images/Ken.jpg" alt="" width=250 height=310></div>
+	</div>
+    
+    <br>
+<!--
+    <h3>Member Name</h3>
     <img src="" alt="">
     <h4>Contact Information</h4>
     <ul>
@@ -35,5 +48,6 @@
         <li>(949) 836-2747</li>
     </ul>
     <p>I'm Megan, and I am a fourth year studying Cognitive Science (Human-Computer Interaction) and Computer Science at UCSD.<br>I like to dance, go hiking, go skiing, and reading.</p>
+-->
  </body>
 </html>
