--- a/interactive.html
+++ b/interactive.html
@@ -56,5 +56,6 @@
          my_canvas.fillRect(50,50,75,50);
        }
      </script>
+     <noscript>Your browser does not support JavaScript!</noscript>
  </body>
 </html>
