--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
  <head>
-  <title>My Page</title>
+  <title>Index</title>
+    <link href="teamStyle.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
   <h1>Elements We Need to Use</h1>
@@ -38,15 +39,22 @@
   </p>
    <h3>Sectioning Content</h3>
   <p>article, aside, nav, section
-  </p>
- 
-  
+  </p>  
 
   <h3>Script-Supporting Elements</h3>
   <p>script, template</p>
 
   <a href="http://validator.w3.org">Validator</a>
-
-  <a href="conformance.html">Conformance Page</a>
+     
+  <div id="linkscontainer">
+     <ul>
+        <li><a href="flow-content.html" target="_blank">Flow Content</a></li>
+        <li><a href="interactive.html" target="_blank">Interactive & Embedded Content</a></li>
+        <li><a href="palpable.html" target="_blank">Palpable Content</a></li>
+        <li><a href="phrasing.html" target="_blank">Phrasing Content</a></li>
+        <li><a href="conformance.html" target="_blank">Conformace Page</a></li>
+        <li><a href="team.html" target="_blank">Team Page</a></li>
+     </ul>
+  </div>
  </body>
 </html>
