Update browser compatibility of phrasing tags

--- a/conformance.html
+++ b/conformance.html
@@ -12,6 +12,8 @@
   <h2>Palpable Content</h2>
   <p>The page content was the same across Chrome and Safari.</p>
   <h2>Phrasing Content</h2>
-  <p>I live in a small hut on a mountain!</p>
+  <p>data tag is compatible with all browser.</p>
+  <p>datalist tag doesn't work in Safari</p>
+  <p>template doesn't work in IE. The data in the table is not loaded at all.</p>
  </body>
 </html>
