Added warnings about "bdi" tag under Flow Content

--- a/conformance.html
+++ b/conformance.html
@@ -6,7 +6,8 @@
  <body>
   <h1>Odditites and Non-Supported Elements</h1>
   <h2>Flow Content</h2>
-  <p>I like cars and lorries and have a big Jeep!</p>
+  <p>The content was the same across Chrome and Safari. Validator produced warnings on the
+     "bdi" tag saying that "bdi" is not supported by any browsers yet.</p>
   <h2>Interactive & Embedded Content</h2>
   <p>While the interactive and embedded content tags were supported on Chrome and Safari, the PDF viewer and the controls for the audio and video player looked slightly different. In Chrome, the controls had rounded edges, while in Safari they were thinner and straight. Furthermore, the controls in Safari had a useful 30-second rewind button, which was lacking from Chrome. In other words, the control fields of the audio and video tags were affected.</p>
   <h2>Palpable Content</h2>
