Fully tested files

--- a/flow-content.html
+++ b/flow-content.html
@@ -70,7 +70,7 @@
          <li>User <bdi>Megan</bdi>: <var>100</var> points</li>
          <li>User <bdi>Kann</bdi>: <var>100</var> points</li>
          <li>User <bdi>Ken</bdi>: <var>100</var> points</li>
-         <li>User <bdi>Tylor</bdi>: <var>100</var> points</li>
+         <li>User <bdi>Tyler</bdi>: <var>100</var> points</li>
          <li>User <bdi>Jiangtian</bdi>: <var>100</var> points</li>
         </ul>
         
@@ -123,7 +123,7 @@
  			<address><span style="color:blue">UCSD is located at 9500 Gilman Dr, La Jolla, CA 92093</span></address>
  			<img src="images/ContactUs.jpg" width="200" height="50" alt="ContactUs" usemap="#ContactUs">
  			<map name="ContactUs"> 
- 				<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.htm"  target="_blank" />
+ 				<area shape="rect" coords="0,0,400,400" alt="ContactUs" href="team.html"  target="_blank" />
  			</map>  
 		</footer>	
 		
