--- a/interactive.html
+++ b/interactive.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Interactive & Embedded Content</title>
+    <title>Interactive &amp; Embedded Content</title>
  </head>
  <body>
     <header>
-        <h1>Interactive & Embedded Content</h1>
+        <h1>Interactive &amp; Embedded Content</h1>
         <p>The tags included in this page are: audio, button, canvas, embed, iframe, img, input, label, object, option, script, select, textarea, and video.</p>
     </header>
     <h3>Fixing the Childhood Obesity Epidemic</h3> 
