--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>Index</title>
-    <link href="teamStyle.css" rel="stylesheet" type="text/css"/>
+    <link href="indexStyle.css" rel="stylesheet" type="text/css"/>
  </head>
  <body>
   <h1>Elements We Need to Use</h1>
@@ -31,18 +31,32 @@
  	figure, footer, form, h1, h2, h3, h4, h5, h6, header, i, iframe, img, input (if the type attribute is not in the Hidden state), ins, kbd, keygen, label, main, map, mark, math, meter, nav, object, ol (if the element's children include at least one li element), output, p, pre, progress, q, ruby, s, samp, section, select, small, span, strong, sub, sup, svg, table, textarea, time, u, ul (if the element's children include at least one li element), var, video, Text that is not inter-element whitespace
   </p>
 
-  <h3>Embedded Content</h3>
-  <p>audio, canvas, embed, iframe, img, math, object, svg, video
-  </p>
-  <h3>Interactive Content</h3>
-  <p>a, audio (if the controls attribute is present), button, embed, iframe, img (if the usemap attribute is present), input (if 	type attribute is not in the Hidden state), keygen, label, object (if the usemap attribute is present), select, textarea, 	   video (if the controls attribute is present)
-  </p>
-   <h3>Sectioning Content</h3>
+  <h3>Interactive &amp; Embedded Content</h3>
+  <ol>
+    <li><a href="tags/audio.html">audio</a></li> 
+    <li><a href="tags/button.html">button</a></li>
+    <li><a href="tags/canvas.html">canvas</a></li>
+    <li><a href="tags/embed.html">embed</a></li>
+    <li><a href="tags/iframe.html">iframe</a></li>
+    <li><a href="tags/img.html">img</a></li>
+    <li><a href="tags/input.html">input</a></li>
+    <li><a href="tags/label.html">label</a></li>
+    <li><a href="tags/object.html">object</a></li>
+    <li><a href="tags/option.html">option</a></li>
+    <li><a href="tags/select.html">select</a></li>
+    <li><a href="tags/textarea.html">textarea</a></li>
+    <li><a href="tags/video.html">video</a></li>
+  </ol>
+
+  <h3>Sectioning Content</h3>
   <p>article, aside, nav, section
   </p>  
 
   <h3>Script-Supporting Elements</h3>
-  <p>script, template</p>
+  <ol>
+    <li><a href="tags/noscript.html">noscript</a></li>
+    <li><a href="tags/script.html">script</a></li>
+  </ol>
 
   <a href="http://validator.w3.org">Validator</a>
      
