adding sectioning content to index

--- a/index.html
+++ b/index.html
@@ -48,14 +48,19 @@
     <li><a href="tags/video.html">video</a></li>
   </ol>
 
-  <h3>Sectioning Content</h3>
-  <p>article, aside, nav, section
-  </p>  
+  <h3>Sectioning Content</h3>  
+  <ol>
+    <li><a href="tags/article.html">article</a></li>
+    <li><a href="tags/aside.html">aside</a></li>
+    <li><a href="tags/nav.html">nav</a></li>
+    <li><a href="tags/section.html">section</a></li>
+  </ol> 
 
   <h3>Script-Supporting Elements</h3>
   <ol>
     <li><a href="tags/noscript.html">noscript</a></li>
     <li><a href="tags/script.html">script</a></li>
+    <li><a href="tags/template.html">template</a></li>
   </ol>
 
   <a href="http://validator.w3.org">Validator</a>
