--- a/index.html
+++ b/index.html
@@ -17,6 +17,88 @@
  	object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, sub, sup, svg, 
  	table, template, textarea, time, u, ul, var, video, wbr, Text
   </p>
+  <ol>
+    <li><a href="tags/a.html">a</a></li> 
+    <li><a href="tags/abbr.html">abbr</a></li>
+    <li><a href="tags/address.html">address</a></li>
+    <li><a href="tags/area.html">area</a></li>
+    <li><a href="tags/article.html">article</a></li>
+    <li><a href="tags/aside.html">aside</a></li>
+    <li><a href="tags/audio.html">audio</a></li>
+    <li><a href="tags/bhtml">b</a></li>
+    <li><a href="tags/bdi.html">bdi</a></li>
+    <li><a href="tags/bdo.html">bdo</a></li>
+    <li><a href="tags/blockquote.html">blockquote</a></li>
+    <li><a href="tags/br.html">br</a></li>
+    <li><a href="tags/button.html">button</a></li>
+    <li><a href="tags/canvas.html">canvas</a></li> 
+    <li><a href="tags/cite.html">cite</a></li>
+    <li><a href="tags/code.html">code</a></li>
+    <li><a href="tags/data.html">data</a></li>
+    <li><a href="tags/datalist.html">datalist</a></li>
+    <li><a href="tags/del.html">del</a></li>
+    <li><a href="tags/dfn.html">dfn</a></li>
+    <li><a href="tags/div.html">div</a></li>
+    <li><a href="tags/dl.html">dl</a></li>
+    <li><a href="tags/em.html">em</a></li>
+    <li><a href="tags/embed.html">embed</a></li>
+    <li><a href="tags/fieldset.html">fieldset</a></li>
+    <li><a href="tags/figure.html">figure</a></li>  
+    <li><a href="tags/footer.html">footer</a></li> 
+    <li><a href="tags/form.html">form</a></li>
+    <li><a href="tags/h1.html">h1</a></li>
+    <li><a href="tags/h2.html">h2</a></li>
+    <li><a href="tags/h3.html">h3</a></li>
+    <li><a href="tags/h4.html">h4</a></li>
+    <li><a href="tags/h5.html">h5</a></li>
+    <li><a href="tags/h6.html">h6</a></li>
+    <li><a href="tags/header.html">header</a></li>
+    <li><a href="tags/hr.html">hr</a></li>
+    <li><a href="tags/i.html">i</a></li>
+    <li><a href="tags/iframe.html">iframe</a></li>
+    <li><a href="tags/img.html">img</a></li>
+    <li><a href="tags/input.html">input</a></li> 
+    <li><a href="tags/ins.html">ins</a></li> 
+    <li><a href="tags/kbd.html">kbd</a></li>
+    <li><a href="tags/keygen.html">keygen</a></li>
+    <li><a href="tags/label.html">label</a></li>
+    <li><a href="tags/main.html">main</a></li>
+    <li><a href="tags/map.html">map</a></li>
+    <li><a href="tags/mark.html">mark</a></li>
+    <li><a href="tags/math.html">math</a></li>
+    <li><a href="tags/meter.html">meter</a></li>
+    <li><a href="tags/nav.html">nav</a></li>
+    <li><a href="tags/noscript.html">noscript</a></li>
+    <li><a href="tags/object.html">object</a></li>
+    <li><a href="tags/ol.html">ol</a></li>
+    <li><a href="tags/output.html">output</a></li>
+    <li><a href="tags/p.html">p</a></li> 
+    <li><a href="tags/pre.html">pre</a></li>
+    <li><a href="tags/progress.html">progress</a></li>
+    <li><a href="tags/q.html">q</a></li>
+    <li><a href="tags/ruby.html">ruby</a></li>
+    <li><a href="tags/s.html">s</a></li>
+    <li><a href="tags/samp.html">samp</a></li>
+    <li><a href="tags/script.html">script</a></li>
+    <li><a href="tags/section.html">section</a></li>
+    <li><a href="tags/select.html">select</a></li>
+    <li><a href="tags/small.html">small</a></li>
+    <li><a href="tags/span.html">span</a></li>
+    <li><a href="tags/strong.html">strong</a></li>
+    <li><a href="tags/sub.html">sub</a></li>
+    <li><a href="tags/sup.html">sup</a></li> 
+    <li><a href="tags/svg.html">svg</a></li>
+    <li><a href="tags/table.html">table</a></li>
+    <li><a href="tags/template.html">template</a></li>
+    <li><a href="tags/textarea.html">textarea</a></li>
+    <li><a href="tags/time.html">time</a></li>
+    <li><a href="tags/u.html">u</a></li>
+    <li><a href="tags/ul.html">ul</a></li>
+    <li><a href="tags/var.html">var</a></li>
+    <li><a href="tags/video.html">video</a></li>
+    <li><a href="tags/wbr.html">wbr</a></li>
+    <li><a href="tags/Text.html">Text</a></li> 
+  </ol>
 
   <h3>Phrasing Content</h3>
   <p>⇒ a, abbr, area (if it is a descendant of a map element), audio, b, bdi, bdo, br, button, canvas, cite, code, data, 
