--- a/index.html
+++ b/index.html
@@ -17,18 +17,12 @@
  	object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, sub, sup, svg, 
  	table, template, textarea, time, u, ul, var, video, wbr, Text
   </p>
+     
 
   <h3>Phrasing Content</h3>
   <ol>
     <li><a href="tags/a.html">a</a></li> 
-    <li><a href="tags/abbr.html">abbr</a></li>
-    <li><a href="tags/area.html">area</a></li>
-    <li><a href="tags/b.html">b</a></li>
-    <li><a href="tags/bdi.html">bdi</a></li>
-    <li><a href="tags/bdo.html">bdo</a></li>
-    <li><a href="tags/br.html">br</a></li>
     <li><a href="tags/cite.html">cite</a></li>
-    <li><a href="tags/code.html">code</a></li>
     <li><a href="tags/data.html">data</a></li>
     <li><a href="tags/datalist.html">datalist</a></li>
     <li><a href="tags/del.html">del</a></li>
@@ -55,17 +49,32 @@
     <li><a href="tags/sub.html">sub</a></li>
     <li><a href="tags/sup.html">sup</a></li>
     <li><a href="tags/svg.html">svg</a></li>
+    <li><a href="tags/template.html">template</a></li>
     <li><a href="tags/time.html">time</a></li>
     <li><a href="tags/u.html">u</a></li>
     <li><a href="tags/var.html">var</a></li>
     <li><a href="tags/wbr.html">wbr</a></li>
   </ol>
 
-  <h3>Palpable Content</h3>
-  <p>a, abbr, address, article, aside, audio (if the controls attribute is present), b, bdi, bdo, blockquote, button, canvas, 
- 	cite, code, data, dfn, div, dl (if the element's children include at least one name-value group), em, embed, fieldset, 
- 	figure, footer, form, h1, h2, h3, h4, h5, h6, header, i, iframe, img, input (if the type attribute is not in the Hidden state), ins, kbd, keygen, label, main, map, mark, math, meter, nav, object, ol (if the element's children include at least one li element), output, p, pre, progress, q, ruby, s, samp, section, select, small, span, strong, sub, sup, svg, table, textarea, time, u, ul (if the element's children include at least one li element), var, video, Text that is not inter-element whitespace
-  </p>
+  <h3>Palpable Content</h3>    
+  <ol>
+    <li><a href="tags/blockquote.html">blockquote</a></li>
+    <li><a href="tags/dl.html">dl</a></li>
+    <li><a href="tags/fieldset.html">fieldset</a></li>
+    <li><a href="tags/figure.html">figure</a></li>
+    <li><a href="tags/footer.html">footer</a></li>
+    <li><a href="tags/form.html">form</a></li>
+    <li><a href="tags/h1.html">h1</a></li>
+    <li><a href="tags/h2.html">h2</a></li>
+    <li><a href="tags/h3.html">h3</a></li>
+    <li><a href="tags/h4.html">h4</a></li>
+    <li><a href="tags/h5.html">h5</a></li>
+    <li><a href="tags/h6.html">h6</a></li>
+    <li><a href="tags/header.html">header</a></li>
+    <li><a href="tags/main.html">main</a></li>
+    <li><a href="tags/nav.html">nav</a></li>
+    <li><a href="tags/ol.html">ol</a></li>   
+  </ol>
 
   <h3>Interactive &amp; Embedded Content</h3>
   <ol>
@@ -95,7 +104,6 @@
   <h3>Script-Supporting Elements</h3>
   <ol>
     <li><a href="tags/script.html">script</a></li>
-    <li><a href="tags/template.html">template</a></li>
   </ol>
 
   <a href="http://validator.w3.org">Validator</a>
